# kozzle-word-tool

./: README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
word_tools/: __init__.py  audio_generator.py  document_processor.py  sentence_generator.py
